# decision-tsp

./: Heuristics.ipynb  LICENSE  README.md  clustered_set.ipynb  data_analysis.ipynb  heuristics.ipynb  heuristics_pipeline.ipynb  pyproject.toml
.github/: labeler.yml
cheuristics/: christo.json  mst.json
fileops/: fileops.py
heuristics/: heuristics.py
json/: opt.json
presentation/: presentation.tex
regressions/: regression.py
tspset1/: tsp_1003_sol.json  tsp_1012_sol.json  tsp_1014_sol.json  tsp_1016_sol.json  tsp_1018_sol.json  tsp_1019_sol.json  tsp_101_sol.json  tsp_1021_sol.json  tsp_1023_sol.json  tsp_1025_sol.json  tsp_1027_sol.json  tsp_1036_sol.json  tsp_1037_sol.json  tsp_1047_sol.json  tsp_1048_sol.json  tsp_1049_sol.json  tsp_104_sol.json  tsp_1050_sol.json  tsp_1060_sol.json  tsp_1068_sol.json  tsp_1071_sol.json  tsp_1073_sol.json  tsp_1074_sol.json  tsp_1076_sol.json  tsp_1078_sol.json  tsp_1082_sol.json  tsp_1084_sol.json  tsp_1089_sol.json  tsp_1090_sol.json  tsp_1093_sol.json  tsp_109_sol.json  tsp_1104_sol.json  tsp_1106_sol.json  tsp_1108_sol.json  tsp_110_sol.json  tsp_1111_sol.json  tsp_1113_sol.json  tsp_1121_sol.json  tsp_1128_sol.json  tsp_1129_sol.json  (+641 more)
tspset1_heuristics/: 1tree.json  assrel.json  fi.json  greedy.json  lplb.json  mst.json  mstheu.json  ni.json  nn.json
tspset2/: ctsp_0_sol.json  ctsp_1006_sol.json  ctsp_1009_sol.json  ctsp_1011_sol.json  ctsp_1012_sol.json  ctsp_1014_sol.json  ctsp_1015_sol.json  ctsp_1017_sol.json  ctsp_1019_sol.json  ctsp_1021_sol.json  ctsp_1022_sol.json  ctsp_1023_sol.json  ctsp_1024_sol.json  (+981 more)
(+3374 files in other folders)
